[package]
name = "cargo-tree-online"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pbzweihander/cargo-tree-online"
homepage = "https://pbzweihander.github.io/cargo-tree-online/"
description = "Render cargo dependency tree in online"

[dependencies]
anyhow = "1.0.44"
cargo-lock = { version = "7.0.1", features = ["dependency-tree"] }
petgraph = "0.6.0"
toml = "0.5.8"
web-sys = "0.3.55"
yew = "0.18.0"
